kustomize-bgd/overlays/prod/color.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: bgd
spec:
  template:
    metadata:
      creationTimestamp: null
    spec:
        - name: COLOR
          value: "green"
